recursion.lessons.recursion.koch.Koch.scala.error
Koch:12: error: type red is not a member of object java.awt.Color
	setCouleur(couleur:Color.red)
                                 ^Koch:14: error: not found: value angle
	angle(60)
        ^